--- a/config/locales/devise.pt-BR.yml
+++ b/config/locales/devise.pt-BR.yml
@@ -10,6 +10,7 @@ pt-BR:
       already_authenticated: "Você já está logado."
       inactive: "Sua conta ainda não foi ativada."
       invalid: "%{authentication_keys} ou senha inválida."
+      blank: "%{authentication_keys} não pode ficar em branco"
       locked: "Sua conta está bloqueada."
       last_attempt: "Você tem mais uma tentativa antes de bloquear sua conta."
       not_found_in_database: "%{authentication_keys} ou senha inválida."
