Adicionando i18n no index de car categories e corrigindo seus testes

--- a/config/locales/rental.pt-BR.yml
+++ b/config/locales/rental.pt-BR.yml
@@ -2,7 +2,7 @@
 pt-BR:
   activerecord:
     models:
-      rental: Modelo de Carro
+      rental: Locações
     attributes:
       rental:
        code: Código
