Aplicando i18n ao index e show de car models

--- a/config/locales/car_category.pt-BR.yml
+++ b/config/locales/car_category.pt-BR.yml
@@ -6,6 +6,6 @@ pt-BR:
     attributes:
       car_category:
        name: Nome
-       daily_rate: Diaria
+       daily_rate: Diária
        car_insurance: Seguro do Carro
        third_part_insurance: Seguro para Terceiros
