User e Admin podem ser status da locacao, inserido enum ao model de user e rental

--- a/config/locales/rental.pt-BR.yml
+++ b/config/locales/rental.pt-BR.yml
@@ -4,6 +4,9 @@ pt-BR:
     models:
       rental: Locações
     attributes:
+      rental/status:
+        scheduled: Agendada
+        ongoing: Em progresso
       rental:
        code: Código
        start_date: Data de inicio
