User consegue ver carros disponiveis/indisponiveis e escolher apenas os disponiveis ao iniciar locacao

--- a/config/locales/car.pt-BR.yml
+++ b/config/locales/car.pt-BR.yml
@@ -4,6 +4,9 @@ pt-BR:
     models:
       car: Carro
     attributes:
+      car/status:
+        unavailable: Indisponível no momento
+        available: Disponível
       car:
        license_plate: Placa
        color: Cor
