TDD para encerramento de locacao e verificar carros disponiveis/indisponiveis

--- a/config/locales/car.pt-BR.yml
+++ b/config/locales/car.pt-BR.yml
@@ -5,7 +5,7 @@ pt-BR:
       car: Carro
     attributes:
       car/status:
-        unavailable: Indisponível no momento
+        unavailable: Indisponível
         available: Disponível
       car:
        license_plate: Placa
